# advent-of-rust-code-2024

./: .gitattributes  .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: lib.rs
day-1/: Cargo.toml
day-1/src/: main.rs
day-10/: Cargo.toml
day-10/src/: main.rs
day-11/: Cargo.toml
day-11/src/: main.rs
day-12/: Cargo.toml
day-12/src/: main.rs
day-13/: Cargo.toml
day-13/src/: main.rs
day-14/: Cargo.toml
day-14/src/: main.rs
day-15/: Cargo.toml
day-15/src/: main.rs
day-16/: Cargo.toml
day-16/src/: main.rs
day-17/: Cargo.toml
day-17/src/: main.rs
day-18/: Cargo.toml
day-18/src/: main.rs
day-19/: Cargo.toml
day-19/src/: main.rs
day-2/: Cargo.toml
day-2/src/: main.rs
day-20/: Cargo.toml
day-20/src/: main.rs
day-21/: Cargo.toml
day-21/src/: button_sequences.rs  main.rs
day-22/: Cargo.toml
day-22/src/: main.rs
day-23/: Cargo.toml
day-23/src/: main.rs
day-24/: Cargo.toml
day-24/src/: main.rs
day-25/: Cargo.toml
day-25/src/: main.rs
day-3/: Cargo.toml
day-3/src/: main.rs
day-4/: Cargo.toml
day-4/src/: main.rs
day-5/: Cargo.toml
day-5/src/: main.rs
day-6/: Cargo.toml
day-6/src/: main.rs
day-7/: Cargo.toml
day-7/src/: main.rs
day-8/: Cargo.toml
day-8/src/: main.rs
day-9/: Cargo.toml
src/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_2.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  lib.rs  main.rs
(+1 files in other folders)
