[workspace]
members = [
    "cli",
    "day-1",
    "day-10",
    "day-11",
    "day-12",
    "day-13",
    "day-14",
    "day-15",
    "day-16",
    "day-17",
    "day-2",
    "day-3",
    "day-4",
    "day-5",
    "day-6",
    "day-7",
    "day-8",
    "day-9",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.98"
cli = { version = "0.1.0", path = "cli" }
